sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:11: error: ')' expected but ';' found.
			echange(maxi ,longueur);
                                               ^